handler exception valid + runtimeException