@@ -1,6 +1,7 @@
 package com.project.petService.exceptions;
 
 import com.project.petService.dtos.response.ApiResponse;
+import jakarta.validation.ConstraintViolation;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -8,13 +9,15 @@ import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
 import java.util.Map;
-import java.util.Objects;
 
 @ControllerAdvice
 @Slf4j
 public class GlobalExceptionHandler {
 
     private static final String MIN_ATTRIBUTE = "min";
+    private static final String MAX_ATTRIBUTE = "max";
+
+    private static final String MIN_VALUE = "value";
 
     @ExceptionHandler(value = Exception.class)
     ResponseEntity<ApiResponse> handlingRuntimeException(RuntimeException exception){
@@ -30,10 +33,15 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(value = AppException.class)
     ResponseEntity<ApiResponse> handlingAppException(AppException exception){
         ErrorCode errorCode = exception.getErrorCode();
+
         ApiResponse apiResponse = new ApiResponse();
 
         apiResponse.setCode(errorCode.getCode());
         apiResponse.setMessage(errorCode.getMessage());
+
+        apiResponse.setMessage(
+                exception.getCustomMessage() != null ? exception.getCustomMessage() : errorCode.getMessage()
+        );
 
         return ResponseEntity
                 .status(errorCode.getStatusCode())
@@ -53,38 +61,47 @@ public class GlobalExceptionHandler {
 //    }
 
     @ExceptionHandler(value = MethodArgumentNotValidException.class)
-    ResponseEntity<ApiResponse> handlingValidation(MethodArgumentNotValidException exception){
+    ResponseEntity<ApiResponse> handlingValidation(MethodArgumentNotValidException exception) {
         String enumKey = exception.getFieldError().getDefaultMessage();
 
         ErrorCode errorCode = ErrorCode.INVALID_KEY;
         Map<String, Object> attributes = null;
+
         try {
             errorCode = ErrorCode.valueOf(enumKey);
 
-//            var constraintViolation = exception.getBindingResult()
-//                    .getAllErrors().getFirst().unwrap(ConstraintViolation.class);
-//
-//            attributes = constraintViolation.getConstraintDescriptor().getAttributes();
+            // Lấy constraintViolation chỉ một lần
+            var constraintViolation = exception.getBindingResult()
+                    .getAllErrors().get(0).unwrap(ConstraintViolation.class);
 
-            log.info(attributes.toString());
+            // Lấy các thuộc tính từ constraintViolation
+            attributes = constraintViolation.getConstraintDescriptor().getAttributes();
 
-        } catch (IllegalArgumentException e){
-
+        } catch (IllegalArgumentException e) {
         }
 
         ApiResponse apiResponse = new ApiResponse();
-
         apiResponse.setCode(errorCode.getCode());
-        apiResponse.setMessage(Objects.nonNull(attributes) ?
+
+        // Gọi hàm mapAttribute với attributes
+        apiResponse.setMessage(
                 mapAttribute(errorCode.getMessage(), attributes)
-                : errorCode.getMessage());
+        );
 
         return ResponseEntity.badRequest().body(apiResponse);
     }
 
-    private String mapAttribute(String message, Map<String, Object> attributes){
-        String minValue = String.valueOf(attributes.get(MIN_ATTRIBUTE));
+    private String mapAttribute(String message, Map<String, Object> attributes) {
+        String minValue = attributes.containsKey(MIN_ATTRIBUTE) ? String.valueOf(attributes.get(MIN_ATTRIBUTE)) : "";
+        String maxValue = attributes.containsKey(MAX_ATTRIBUTE) ? String.valueOf(attributes.get(MAX_ATTRIBUTE)) : "";
+        String valueID = attributes.containsKey(MIN_VALUE) ? String.valueOf(attributes.get(MIN_VALUE)) : "";
 
-        return message.replace("{" + MIN_ATTRIBUTE + "}", minValue);
+
+        // Thay thế các giá trị trong message
+        message = message.replace("{" + MIN_ATTRIBUTE + "}", minValue);
+        message = message.replace("{" + MAX_ATTRIBUTE + "}", maxValue);
+        message = message.replace("{" + MIN_VALUE + "}", valueID);
+
+        return message;
     }
 }
